--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,41 @@
-.App {
-  text-align: center;
+header {
+  background-color: #282c34;
+  min-height: 10vh;
+  width: 100vw;
+  min-width: 250px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  gap: 2rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header > .socials {
+  display: flex;
+  gap: 2rem;
+  justify-content: space-around;
+}
+
+header > .socials > a, header > a {
+  color: white;
+  text-decoration: none;
+  transition: all .2s ease-in-out;
+}
+
+header > .socials > a:hover {
+  color: lightgray;
+  transform: scale(1.1);
+}
+
+.main-container {
+  background-color: lightgrey;
+  min-height: 90vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
