--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,19 @@
+.app {
+  align-items: center;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+:root {
+  --background-color: #282c34;
+  --border-color: #ffffff20;
+}
+
+/* Styling for Header component */
 header {
-  background-color: #282c34;
+  background-color: var(--background-color);
   min-height: 10vh;
   width: 100vw;
   min-width: 250px;
@@ -29,13 +43,55 @@ header > .socials > a:hover {
   transform: scale(1.1);
 }
 
+/* Styling for Projects component */
 .main-container {
-  background-color: lightgrey;
+  background-color: var(--background-color);
   min-height: 90vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
+}
+
+.main-container > .title {
+  width: 100vw;
+  height: 10vh;
+  border: solid 1px var(--border-color);
+  border-bottom: 0;
+}
+
+.project-content {
+  display: flex;
+  justify-content: center;
+}
+
+.project-content > .images {
+  width: 50vw;
+  height: 80vh;
+  border: solid 1px var(--border-color);
+  border-right: 0;
+}
+
+.project-content > .description {
+  width: 50vw;
+  height: 80vh;
+  border: solid 1px var(--border-color);
+}
+
+@media (max-width: 480px) {
+  .project-content {
+    flex-direction: column;
+  }
+  .project-content > .images {
+    width: 100vw;
+    height: 60vh;
+    border-right: solid 1px var(--border-color);
+    border-bottom: 0;
+  }
+  .project-content > .description {
+    width: 100vw;
+    height: 60vh;
+  }
 }
