--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,11 @@
 
 :root {
   --header-background-color: rgb(40, 44, 52);
-  --main-background-color: rgb(56, 61, 72);
-  --border-color: #ffffff20;
+}
+
+h1, h2, h3, h4, h5, h6, a, p, span, li {
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
 }
 
 /* Styling for Header component */
@@ -25,6 +28,7 @@ header {
   font-size: calc(10px + 2vmin);
   color: white;
   gap: 2rem;
+  border-bottom: solid 1px #ffffff20;
 }
 
 header > .header-menu {
@@ -76,7 +80,6 @@ header > .socials > a:hover {
 /* Styling for Projects component */
 
 .project-container {
-  background-color: var(--main-background-color);
   min-height: 90vh;
   width: 100%;
   display: inline-flex;
@@ -89,35 +92,23 @@ header > .socials > a:hover {
 .project-container > .title {
   width: 100%;
   height: 10vh;
-  border: solid 1px var(--border-color);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: white;
   gap: 1rem;
 }
 
 .project-container > .title > .nav-button {
   all: unset;
-  text-align: center;
   height: 100%;
   font-size: x-large;
-  flex-basis: 20%;
-  padding: none;
-  background-color: var(--main-background-color);
-  color: white;
+  background-color: white;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .project-container > .title > .nav-button:hover {
   cursor: pointer;
-}
-
-#nav-button-left {
-  border-right: solid 1px var(--border-color)
-}
-
-#nav-button-right {
-  border-left: solid 1px var(--border-color)
 }
 
 .project-content {
@@ -127,7 +118,6 @@ header > .socials > a:hover {
 
 .dots-container {
   display: none;
-  border: solid 1px var(--border-color);
   border-bottom: none;
   border-top: none; 
   height: 3vh;
@@ -135,7 +125,6 @@ header > .socials > a:hover {
   align-items: center;
   justify-content: center;
   gap: 0.2rem;
-  color: white;
   opacity: 0.2;
   font-size: calc(2vh);
 }
@@ -143,7 +132,6 @@ header > .socials > a:hover {
 .project-content > .images {
   width: 50vw;
   min-height: 60vh;
-  border: solid 1px var(--border-color);
   border-right: 0;
   border-top: 0;
   display: flex;
@@ -163,9 +151,7 @@ header > .socials > a:hover {
   width: 50vw;
   height: 80vh;
   min-height: 70vh;
-  border: solid 1px var(--border-color);
   border-top: none;
-  color: white;
   font-size: 1rem;
   padding: 1rem;
   display: flex;
@@ -188,7 +174,6 @@ header > .socials > a:hover {
   gap: 0.5rem;
   justify-content: center;
   text-decoration: none;
-  color: white;
   margin-top: 10px;
 }
 
@@ -199,12 +184,10 @@ header > .socials > a:hover {
 
 .project-content > .description > a > img {
   height: 50px;
-  color: white;
 }
 
 .project-content > .description > a > #github {
   height: 50px;
-  color: white;
 }
 
 .project-content > .description > a > p {
@@ -218,15 +201,21 @@ header > .socials > a:hover {
   .project-content {
     flex-direction: column;
   }
+
+  .project-container > .title {
+    justify-content: center;
+  }
+
+  .project-container > .title > .nav-button {
+    display: none;
+  }
+
   .project-content > .images {
     width: 100vw;
     min-height: 40vh;
-    border-right: solid 1px var(--border-color);
-    border-bottom: 0;
   }
   .project-content > .description {
     width: 100vw;
     min-height: 60vh;
-    border-top: solid 1px var(--border-color)
   }
 }
