--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 .app {
   align-items: center;
-  /* display: flex;
-  flex-direction: column; */
 }
 
 * {
@@ -9,17 +7,20 @@
 }
 
 :root {
-  --header-background-color: rgb(40, 44, 52);
+  --background: rgb(40, 44, 52);
 }
 
-h1, h2, h3, h4, h5, h6, a, p, span, li {
-  font-family: "Rubik", sans-serif;
-  font-weight: 400;
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Roboto", sans-serif;
+}
+
+a, p, span, li {
+  font-family: "Helvetica", sans-serif;
 }
 
 /* Styling for Header component */
 header {
-  background-color: var(--header-background-color);
+  background-color: var(--background);
   height: 10vh;
   width: 100vw;
   display: flex;
@@ -34,9 +35,63 @@ header {
 
 header > .header-menu {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-left: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  height: 100%;
+  width: fit-content;
+}
+
+.dropdown-content {
+  position: absolute;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: fit-content;
+  min-width: fit-content;
+  margin-top: 10vh;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background-color: var(--background);
+}
+
+.dropdown-content > .links {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  gap: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  min-width: fit-content;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.dropdown-content > .links > a {
+  width: 100%;
+  text-decoration: none;
+  color: white;
+  font-size: 14px;
+}
+
+.dropdown-content > .links > a:hover {
+  transform: scale(1.1);
+  color: lightgray;
+}
+
+.dropdown-content > .links > button {
+  all: unset;
+  font-size: 14px;
+}
+
+.dropdown-content > .links > button:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  color: lightgray;
 }
 
 header > p {
@@ -55,9 +110,13 @@ header > .header-menu > button {
   transition: all .2s ease-in-out;
 }
 
-header > .header-menu > button:hover {
+header > .header-menu:hover > button {
   color: lightgray;
   transform: scale(1.1);
+}
+
+header > .header-menu:hover .dropdown-content {
+  display: flex;
 }
 
 header > .socials {
@@ -110,7 +169,7 @@ header > .socials > a:hover {
 }
 
 .project-container > .title > h3 {
-  color: var(--header-background-color);
+  color: var(--background);
   font-weight: bold;
 }
 
@@ -196,7 +255,7 @@ header > .socials > a:hover {
   justify-content: center;
   text-decoration: none;
   margin-top:20px;
-  background-color: var(--header-background-color);
+  background-color: var(--background);
   color: white;
   border-radius: 10px;
   padding-left: 0.5rem;
