--- a/src/NewApp.css
+++ b/src/NewApp.css
@@ -6,31 +6,65 @@
   --background: rgb(40, 44, 52);
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, a, p, span, li {
   font-family: "Roboto", sans-serif;
 }
 
-a, p, span, li {
-  font-family: "Helvetica", sans-serif;
+/* Styling for filler panel for desktop view */
+.filler-container {
+  display: none;
 }
 
 /* Styling for home page */
+.home-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.main-content-container {
+  border: solid 1px green;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.introduction-container {
+  border: solid 1px red;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: fit-content;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+.introduction-container > img {
+  height: 100px;
+  width: 100px;
+}
+
+.introduction-container > .introduction-text {
+  text-align: center;
+  padding: 1rem;
+  border: solid 1px purple;
+}
 
 /* Styling for navigation bar */
-.nav-wrapper {
+.nav-container {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
 }
 
-.nav-wrapper > img {
+.nav-container > img {
   height: 50px;
   width: 50px;
   padding: 0.5rem;
 }
 
-.nav-wrapper > .navicon {
+.nav-container > .navicon {
   height: 50px;
   width: 50px;
   display: flex;
@@ -41,14 +75,35 @@ a, p, span, li {
 }
 
 @media (min-width: 480px) {
-  .nav-wrapper {
+  .home-container {
+    flex-direction: row;
+  }
+
+  .nav-container {
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-end;
     gap: 1rem;
     padding: 1rem;
-    width: 200px;
+    width: 20vw;
     height: 100vh;
     border-right: solid 1px rgb(0,0,0,0.1)
+  }
+
+  .main-content-container {
+    width: 70vw;
+    overflow: scroll;
+  }
+
+  .introduction-container > img {
+    height: 150px;
+    width: 150px;
+  }
+
+  .filler-container {
+    display: flex;
+    width: 10vw;
+    height: 100vh;
+    border-left: solid 1px rgb(0,0,0,0.1);
   }
 }
