--- a/src/NewApp.css
+++ b/src/NewApp.css
@@ -3,7 +3,10 @@
 }
 
 :root {
-  --background: rgb(40, 44, 52);
+  --primary-color: rgba(14, 47, 125, 0.7);
+  --secondary-color: rgba(125, 36, 14);
+  --tertiary-color: rgba(103, 125, 14, 0.7);
+  --border-color: rgb(60, 60, 60);
 }
 
 h1, h2, h3, h4, h5, h6, a, p, span, li {
@@ -68,17 +71,19 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
   height: 100px;
   width: 100px;
   margin-bottom: 75px;
-  border-radius: 50px;
-  background-color: rgba(14, 47, 125, 0.689);
+  border-radius: 50%;
+  background-color: var(--primary-color)
 }
 
 .introduction-container > .introduction-text {
   text-align: center;
   padding: 3rem;
+  color: var(--secondary-color)
 }
 
 .introduction-text > p {
   font-size: 18px;
+  color: black;
 }
 
 /* Stlying for more info section */
@@ -91,13 +96,17 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
   align-items: center;
 }
 
-#devices-image {
-  max-width: 80vw;
-  transform: translateY(4%)
+.devices-image {
+  width: 80%;
+  max-width: 80%;
+  aspect-ratio: 2.5/1;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: bottom;
 }
 
 .more-info-content {
-  background-color: rgba(14, 47, 125, 0.689);
+  background-color: var(--primary-color);
   width: 100%;
   height: fit-content;
   color: white;
@@ -122,6 +131,35 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
   padding-right: 2rem;
 }
 
+/* Styling for experience section */
+.experience-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.frontend-experience {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
+  width: 80%;
+  height: 40vh;
+  border: solid 1px var(--border-color);
+  border-radius: 4px;
+  background-color: white;
+  transform: translateY(-5%);
+}
+
+.frontend-icon {
+  background-color: var(--secondary-color);
+  color: white;
+  padding: 1rem;
+  border-radius: 50%;
+  margin-top: 1rem;
+}
+
 /* Styling changes for when screen is wider than 480px (desktop view) */
 
 @media (min-width: 480px) {
@@ -141,8 +179,8 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
 
   .main-content-container {
     width: 70vw;
-    border-left: solid 1px rgb(0,0,0,0.1);
-    border-right: solid 1px rgb(0,0,0,0.1);
+    border-left: solid 1px var(--border-color);
+    border-right: solid 1px var(--border-color);
     overflow: scroll;
   }
 
@@ -158,7 +196,7 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
     height: 100vh;
   }
 
-  .more-info-container {
+  /* .more-info-container {
     display: none;
-  }
+  } */
 }
