--- a/src/NewApp.css
+++ b/src/NewApp.css
@@ -136,6 +136,7 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 1rem;
 }
 
 .experience-card {
@@ -147,16 +148,9 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
   width: 80%;
   min-height: fit-content;
   border: solid 1px var(--border-color);
+  border-radius: 5px;
   background-color: white;
   transform: translateY(-5%);
-}
-
-#frontend-card {
-  border-radius: 4px 4px 0px 0px;
-}
-
-#backend-card {
-  border-radius: 0px 0px 4px 4px;
 }
 
 .experience-icon {
@@ -262,15 +256,6 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
   .experience-card {
     width: 300px;
     height: 480px;
-  }
-
-  #frontend-card {
-    border-radius: 4px 0px 0px 4px;
-    border-right: none;
-  }
-
-  #backend-card {
-    border-radius: 0px 4px 4px 0px;
   }
 
   .filler-container {
