--- a/src/NewApp.css
+++ b/src/NewApp.css
@@ -177,7 +177,7 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
   color: var(--primary-color);
 }
 
-/* Styling for projects */
+/* Styling for Projects section */
 
 .projects-container {
   display: flex;
@@ -202,13 +202,115 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
 .project-card {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
-  height: 150px;
+  height: 400px;
   width: 250px;
+  border: solid 1px var(--border-color);
   border-radius: 10px;
-  background-color: var(--primary-color);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  box-shadow: 1px 1px 5px 1px #888888;
+  transition: box-shadow 200ms ease-in-out;
 }
+
+.project-title {
+  width: 101%;
+  height: 18.5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+  text-align: center;
+  background-color: rgba(0,0,0,0.6);
+  border: solid 1px rgba(0,0,0,0.7);
+  border-radius: 0px 0px 10px 10px;
+  color: white;
+  transition: all 400ms ease-in-out;
+}
+
+.project-hover-content {
+  height: 100%;
+  display: none;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  padding-top: 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-bottom: 4rem;
+}
+
+.project-hover-content > h2 {
+  white-space: nowrap;
+}
+
+.project-hover-content > a {
+  all: unset;
+  background-color: white;
+  font-weight: bold;
+  padding: 1rem;
+  border-radius: 10px;
+  margin-top: 1rem;
+  transition: transform 200ms ease-in-out;
+}
+
+.project-hover-content > a:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+.project-card:hover {
+  box-shadow: 1px 1px 5px 4px #888888;
+}
+
+.project-card:hover > .project-title > h2 {
+  display: none;
+}
+
+.project-card:hover .project-title {
+  height: 100%;
+  justify-content: flex-start;
+  border-radius: 10px;
+}
+
+.project-card:hover .project-hover-content {
+  display: flex;
+}
+
+#lexicon-button {
+  color: rgb(83,141,78);
+}
+
+#lexicon-card:hover .project-title {
+  background-color: rgba(83,141,78,0.9)
+}
+
+#gms-button {
+  color: rgb(23,15,102);
+}
+
+#gms-card:hover .project-title {
+  background-color: rgba(23,15,102,0.9)
+}
+
+#bean-button {
+  color: rgb(11,168,211);
+}
+
+#bean-card:hover .project-title {
+  background-color: rgba(11,168,211,0.9)
+}
+
+#tastebook-button {
+  color: rgb(164,118,166);
+}
+
+#tastebook-card:hover .project-title {
+  background-color: rgba(164,118,166,0.9)
+}
+
 
 /* Styling changes for when screen is wider than 480px (desktop view) */
 
