--- a/src/NewApp.css
+++ b/src/NewApp.css
@@ -239,16 +239,17 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
   text-align: center;
   padding-left: 3rem;
   padding-right: 3rem;
-  padding-bottom: 2rem;
 }
 
 .project-cards-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 1rem;
+  gap: 2rem;
   padding-left: 2rem;
   padding-right: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .project-card {
@@ -376,7 +377,7 @@ h1, h2, h3, h4, h5, h6, a, p, span, li {
     justify-content: flex-start;
     align-items: flex-end;
     gap: 1rem;
-    padding: 1rem;
+    padding: 2rem;
     width: 20vw;
     height: 100vh;
     position: fixed;
