redesign folder removed, old site files archived

--- a/src/App.css
+++ b/src/App.css
@@ -1,325 +1,423 @@
-.app {
-  align-items: center;
-}
-
 * {
   box-sizing: border-box;
 }
 
 :root {
-  --background: rgb(40, 44, 52);
+  --primary-color: rgba(14, 47, 125, 0.7);
+  --secondary-color: rgba(125, 36, 14);
+  --tertiary-color: rgba(103, 125, 14, 0.7);
+  --border-color: rgb(60, 60, 60);
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, a, p, span, li {
   font-family: "Roboto", sans-serif;
 }
 
-a, p, span, li {
-  font-family: "Helvetica", sans-serif;
+/* Styling for filler panel for desktop view */
+.filler-container {
+  display: none;
 }
 
-/* Styling for Header component */
-header {
-  background-color: var(--background);
-  height: 10vh;
+/* Styling for home page */
+.home-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.main-content-container {
+  margin-top: 10vh;
   width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+/* Styling for navigation bar */
+.nav-container {
+  position: fixed;
+  background-color: white;
+  width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  gap: 2rem;
-  border-bottom: solid 1px #ffffff20;
+  z-index: 2;
 }
 
-header > .header-menu {
+.nav-container > img {
+  height: 50px;
+  width: 50px;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem;
+}
+
+.nav-container > .navicon {
+  all: unset;
+  height: 50px;
+  width: 50px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  height: 100%;
+  text-align: center;
+  font-size: x-large;
+}
+
+.nav-container > .navicons {
+  display: none;
+  width: 50px;
+  height: fit-content;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  gap: 2rem;
   width: fit-content;
 }
 
-.dropdown-content {
-  position: absolute;
-  display: none;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: fit-content;
-  min-width: fit-content;
-  margin-top: 10vh;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  background-color: var(--background);
-}
-
-.dropdown-content > .links {
+.nav-container > .mobile {
   display: flex;
-  flex-direction: column;
-  text-align: left;
-  gap: 2rem;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  min-width: fit-content;
-  padding-left: 1rem;
+  flex-direction: row;
+  justify-content: center;
   padding-right: 1rem;
 }
 
-.dropdown-content > .links > a {
-  width: 100%;
+.nav-container > .navicon:hover {
+  color: var(--primary-color)
+}
+
+
+.nav-container > .navicons > a {
   text-decoration: none;
-  color: white;
-  font-size: 14px;
+  color: black;
+  font-size: xx-large;
 }
 
-.dropdown-content > .links > a:hover {
+.nav-container > .navicons > a:hover {
   transform: scale(1.1);
-  color: lightgray;
+  color: var(--primary-color)
 }
 
-.dropdown-content > .links > button {
-  all: unset;
-  font-size: 14px;
-}
+/* Styling for introduction section */
 
-.dropdown-content > .links > button:hover {
-  cursor: pointer;
-  transform: scale(1.1);
-  color: lightgray;
-}
-
-header > .header-menu > button {
-  all: unset;
-  cursor: pointer;
-  transition: all .2s ease-in-out;
-}
-
-header > .header-menu:hover > button {
-  color: lightgray;
-  transform: scale(1.1);
-}
-
-header > .header-menu:hover {
-  padding-right: 3rem;
-}
-
-header > .header-menu:hover .dropdown-content {
+.introduction-container {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: fit-content;
+  gap: 1rem;
+  padding-bottom: 2rem;
 }
 
-header > p {
-  position: absolute;
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
+.introduction-container > img {
+  height: 150px;
+  width: 150px;
+  margin-bottom: 3rem;
+  border-radius: 50%;
+  background-color: var(--primary-color)
+}
+
+.introduction-container > .introduction-text {
   text-align: center;
-  max-width: fit-content;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  color: var(--secondary-color)
 }
 
-header > .socials {
+.introduction-text > p {
+  font-size: 18px;
+  color: black;
+}
+
+/* Stlying for more info section */
+.more-info-container {
   display: flex;
-  gap: 2rem;
-  justify-content: space-around;
-  margin-right: 1rem;
-}
-
-header > .socials > a {
-  color: white;
-  text-decoration: none;
-  transition: all .2s ease-in-out;
-}
-
-header > .socials > a:hover {
-  color: lightgray;
-  transform: scale(1.1);
-}
-
-/* Styling for Carousel */
-.carousel {
-  overflow: hidden;
-}
-
-.carousel-inner {
-  white-space: nowrap;
-  transition: transform 0.5s;
-}
-
-/* Styling for Projects component */
-
-.project-container {
-  min-height: 90vh;
-  width: 100%;
-  display: inline-flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  font-size: calc(10px + 2vmin);
-}
-
-.project-container > .title {
-  width: 100%;
-  height: 10vh;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 1rem;
-}
-
-.project-container > .title > h3 {
-  color: var(--background);
-  font-weight: bold;
-}
-
-.project-container > .title > .nav-button {
-  all: unset;
-  height: 100%;
-  font-size: x-large;
-  background-color: white;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  transition: all 0.2s ease-out;
-}
-
-.project-container > .title > .nav-button:hover {
-  cursor: pointer;
-}
-
-.nav-button:hover #nav-left {
-  transform: scale(1.2);
-}
-
-.project-content {
-  display: flex;
-  justify-content: center;
-}
-
-.dots-container {
-  display: none;
-  border-bottom: none;
-  border-top: none; 
-  height: 3vh;
   width: 100%;
   align-items: center;
-  justify-content: center;
-  gap: 0.2rem;
-  opacity: 0.2;
-  font-size: calc(2vh);
 }
 
-.project-content > .images {
-  width: 50vw;
-  min-height: 60vh;
-  border-right: 0;
-  border-top: 0;
-  display: flex;
-  justify-content: center;
-  padding: 1rem;
-}
-
-.project-content > .images > .project-image {
+.devices-image {
+  width: 80%;
+  max-width: 80%;
+  aspect-ratio: 2.5/1;
   background-size: contain;
   background-repeat: no-repeat;
-  background-position: center;
-  width: 90%;
-  margin: 10px;
+  background-position: bottom;
 }
 
-.project-content > .description {
-  width: 50vw;
-  height: 80vh;
-  min-height: 70vh;
-  border-top: none;
-  font-size: 1rem;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+.more-info-content {
+  background-color: var(--primary-color);
+  width: 100%;
+  height: fit-content;
+  color: white;
 }
 
-.project-description {
+.more-info-text {
   display: flex;
   flex-direction: column;
-  white-space: initial;
-  overflow: scroll;
+  justify-content: flex-start;
+  text-align: center;
+  width: 100%;
+  padding-top: 2rem;
+  padding-bottom: 6rem;
+  gap: 1rem;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.5em;
+}
+
+.more-info-text > p {
   padding-left: 2rem;
   padding-right: 2rem;
 }
 
-.project-content > .description > a {
-  all: unset;
-  min-width: max-content;
-  min-height: fit-content;
+/* Styling for experience section */
+.experience-container {
   display: flex;
-  gap: 0.5rem;
+  flex-wrap: wrap;
   justify-content: center;
-  text-decoration: none;
-  margin-top:20px;
-  background-color: var(--background);
+  align-items: center;
+  gap: 1rem;
+}
+
+.experience-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
+  min-width: 256px;
+  max-width: 300px;
+  height: 480px;
+  border: solid 1px var(--border-color);
+  border-radius: 5px;
+  background-color: white;
+  transform: translateY(-12%);
+}
+
+.experience-icon {
+  background-color: var(--secondary-color);
   color: white;
+  padding: 1rem;
+  border-radius: 50%;
+  margin-top: 2rem;
+}
+
+.experience-text {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.languages-container {
+  font-size: 0.9rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  margin-bottom: 2rem;
+}
+
+.languages-container > h3 {
+  color: var(--primary-color);
+}
+
+/* Styling for Projects section */
+
+.projects-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 2rem;
+}
+
+.projects-text {
+  text-align: center;
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.project-cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.project-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  height: 400px;
+  width: 256px;
+  border: solid 1px var(--border-color);
   border-radius: 10px;
-  /* padding-left: 0.5rem;
-  padding-right: 0.5rem;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem; */
-  font-size: calc(8px + 1vh)
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  box-shadow: 1px 1px 5px 1px #888888;
+  transition: box-shadow 200ms ease-in-out;
 }
 
-.project-content > .description > a:hover {
-  transform: scale(1.1);
+.project-title {
+  width: 101%;
+  height: 18.5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+  text-align: center;
+  background-color: rgba(0,0,0,0.6);
+  border: solid 1px rgba(0,0,0,0.7);
+  border-radius: 0px 0px 10px 10px;
+  color: white;
+  transition: all 400ms ease-in-out;
+}
+
+.project-hover-content {
+  height: 100%;
+  display: none;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  padding-top: 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-bottom: 4rem;
+}
+
+.project-hover-content > h2 {
+  white-space: nowrap;
+}
+
+.project-hover-content > a {
+  all: unset;
+  background-color: white;
+  font-weight: bold;
+  padding: 1rem;
+  border-radius: 10px;
+  margin-top: 1rem;
+  transition: transform 200ms ease-in-out;
+}
+
+.project-hover-content > a:hover {
   cursor: pointer;
+  transform: scale(1.1);
 }
 
-.project-content > .description > a > img {
-  height: 40px;
-  padding-left:0.5rem;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+.project-card:hover {
+  box-shadow: 1px 1px 5px 4px #888888;
 }
 
-.project-content > .description > a > #github {
-  height: 40px;
-  padding: 0.5rem;
+.project-card:hover > .project-title > h2 {
+  display: none;
 }
 
-.project-content > .description > a > p {
-  align-self: center;
-  padding-right: 0.5rem;
+.project-card:hover .project-title {
+  height: 100%;
+  justify-content: flex-start;
+  border-radius: 10px;
 }
 
-@media (max-width: 480px) {
-  header > .socials {
-    gap: 1rem;
+.project-card:hover .project-hover-content {
+  display: flex;
+}
+
+#lexicon-button {
+  color: rgb(83,141,78);
+}
+
+#lexicon-card:hover .project-title {
+  background-color: rgba(83,141,78,0.9)
+}
+
+#gms-button {
+  color: rgb(23,15,102);
+}
+
+#gms-card:hover .project-title {
+  background-color: rgba(23,15,102,0.9)
+}
+
+#bean-button {
+  color: rgb(11,168,211);
+}
+
+#bean-card:hover .project-title {
+  background-color: rgba(11,168,211,0.9)
+}
+
+#tastebook-button {
+  color: rgb(164,118,166);
+}
+
+#tastebook-card:hover .project-title {
+  background-color: rgba(164,118,166,0.9)
+}
+
+
+/* Styling changes for when screen is wider than 480px (desktop view) */
+
+@media (min-width: 480px) {
+  .home-container {
+    flex-direction: row;
   }
 
-  .dots-container {
-    display: flex;
-  }
-  .project-content {
+  .nav-container {
     flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
+    gap: 1rem;
+    padding: 2rem;
+    width: 20vw;
+    height: 100vh;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    border-right: solid 1px var(--border-color);
   }
 
-  .project-container > .title {
-    justify-content: center;
-  }
-
-  .project-container > .title > .nav-button {
+  .nav-container > .navicon {
     display: none;
   }
 
-  .project-content > .images {
-    width: 100vw;
-    min-height: 40vh;
+  .nav-container > .desktop {
+    display: flex;
   }
-  .project-content > .description {
-    width: 100vw;
-    height: fit-content;
+
+  .nav-container > .mobile {
+    display: none;
+  }
+
+  .main-content-container {
+    width: 65vw;
+    overflow: scroll;
+    margin-left: 20vw;
+    margin-top: 0;
+  }
+
+  .devices-image {
+    max-width: 500px;
+  }
+
+  .filler-container {
+    display: flex;
+    width: 15vw;
+    height: 100vh;
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    border-left: solid 1px var(--border-color);
   }
 }
